# ChakraCore

./: CMakeLists.txt
lib/common/: CMakeLists.txt  CommonBasic.h  CommonDefines.h  CommonMin.h
lib/common/DataStructures/: BaseDictionary.h  BitVector.h  DictionaryEntry.h  Dlist.h  FixedBitVector.h  SList.h  SparseBitVector.h  comparer.h
lib/common/Memory/: ArenaAllocator.h  Chakra.Common.Memory.vcxproj  HeapConstants.h  PageAllocator.h  SmallFinalizableHeapBlock.cpp  SmallFinalizableHeapBlock.h  SmallLeafHeapBlock.cpp  SmallLeafHeapBlock.h  SmallNormalHeapBlock.cpp  SmallNormalHeapBlock.h
lib/common/codex/: CMakeLists.txt  Utf8Codex.h
lib/common/common/: CMakeLists.txt  CommonCommonPch.h  DateUtilities.cpp  DaylightTimeHelper.cpp  Int64Math.cpp  Jobs.cpp  Jobs.h  MathUtil.cpp  NumberUtilities.cpp  SmartFPUControl.cpp  unicode.cpp  vtinfo.cpp
lib/common/core/: CMakeLists.txt  CommonTypedefs.h  ConfigFlagsTable.h  Output.h  globals.h
pal/inc/: pal.h  pal_mstypes.h
pal/inc/rt/: palrt.h
pal/src/: CMakeLists.txt
pal/src/strsafe/: printf.cpp  vprintf_generic.hpp
pal/src/sync/: cs.cpp
test/: rlexedirs.xml
test/Messages/: ProxySetPrototypeOf.js  rlexe.xml
